Move publish location to lovettsoftware.com

--- a/Website/default.html
+++ b/Website/default.html
@@ -3,8 +3,8 @@
 <head>
     <meta content="en-us" http-equiv="Content-Language" />
     <meta content="text/html; charset=windows-1252" http-equiv="Content-Type" />
-    <link rel="shortcut icon" href="http://vteam.com/MyMoney/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="http://vteam.com/MyMoney/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://github.com/clovett/MyMoney.Net/raw/master/Website/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="https://github.com/clovett/MyMoney.Net/raw/master/Website/favicon.ico" type="image/x-icon" />
     <title>MyMoney</title>
     <style type="text/css">
         .screenShot
@@ -29,15 +29,15 @@
         <tr>
         <td>
         <center>
-        <a href="http://vteam.com/MyMoney/download/MyMoney.application">Windows Download</a> |
-        <a href="http://vteam.com/mymoney/documentation/Welcome.htm">Online Documentation</a>
+        <a href="http://www.lovettsoftware.com/Downloads/MyMoney/MyMoney.application">Windows Download</a> |
+        <a href="https://github.com/clovett/MyMoney.Net/wiki">Online Documentation</a>
         </center>
         <hr /><br /> 
         </td></tr>
         <tr>
             <td >
                 <img alt="MyMoney" src="icons/MyMoney.png" height="53" width="53" style="float: left; margin:3px" />
-                <span class="header">MyMoney</span> is a rich client <a href="http://vteam.com/MyMoney/download/MyMoney.application">
+                <span class="header">MyMoney</span> is a rich client <a href="http://www.lovettsoftware.com/Downloads/MyMoney/MyMoney.application">
                 .NET 4.0 ClickOnce application</a> for managing your personal finances.  It is
                 written entirely in C# and is designed for programmers who want easy access to 
                 their data and who want to quickly and easily add their own features.  Your data
@@ -230,8 +230,8 @@
         <br />
         <hr />
         <center>
-        <a href="http://vteam.com/MyMoney/download/MyMoney.application">Windows Download</a> |
-        <a href="http://vteam.com/mymoney/documentation/Welcome.htm">Online Documentation</a>
+        <a href="http://www.lovettsoftware.com/Downloads/MyMoney/MyMoney.application">Windows Download</a> |
+        <a href="https://github.com/clovett/MyMoney.Net/wiki">Online Documentation</a>
         </center>
         </td></tr>
     </table>
